ya nenavizhu eto gavno

--- a/assets/maps/warehouse_map.yaml
+++ b/assets/maps/warehouse_map.yaml
@@ -1,88 +1,13 @@
 # Карта окружения для RelayBot (ПРОТОТИП)
-# Комната 2x1 метр для тестирования
-# Координатная система: начало координат (0,0) в углу комнаты
-# Ось X направлена вдоль длинной стороны (2м), ось Y вдоль короткой (1м)
+# Комната 2x1 метр - ПУСТАЯ для тестирования
+# Навигация только по одометрии, без препятствий
 
-# Размеры карты (маленькая комната для прототипа)
-width: 2.0   # 2 метра
-height: 1.0  # 1 метр
-
-# Разрешение карты (метры на пиксель)
-resolution: 0.02  # 2 см для точности в маленькой комнате
-
-# Начало координат карты (метры)
+width: 2.0
+height: 1.0
+resolution: 0.1  # 10см - грубое разрешение для скорости
 origin:
   x: 0.0
   y: 0.0
 
-# Сетка занятости (0 = свободно, 1 = занято)
-# Размер сетки: 2.0/0.02 x 1.0/0.02 = 100x50 пикселей
-
-obstacles:
-  # Стены периметра комнаты 2x1 метр
-  # Левая стена (X=0)
-  - type: rectangle
-    x: 0.0
-    y: 0.0
-    width: 0.05
-    height: 1.0
-  
-  # Правая стена (X=2.0)
-  - type: rectangle
-    x: 1.95
-    y: 0.0
-    width: 0.05
-    height: 1.0
-  
-  # Нижняя стена (Y=0)
-  - type: rectangle
-    x: 0.0
-    y: 0.0
-    width: 2.0
-    height: 0.05
-  
-  # Верхняя стена (Y=1.0)
-  - type: rectangle
-    x: 0.0
-    y: 0.95
-    width: 2.0
-    height: 0.05
-  
-  # Опционально: небольшое препятствие в центре (закомментировано)
-  # Раскомментируйте если нужно добавить препятствие
-  # - type: rectangle
-  #   x: 0.9
-  #   y: 0.4
-  #   width: 0.2
-  #   height: 0.2
-
-# Зоны интереса
-zones:
-  # Домашняя позиция (зона 35x35см)
-  home:
-    x: 0.2      # 20см от левой стены
-    y: 0.5      # Центр по ширине
-    radius: 0.175  # Радиус 17.5см (диаметр 35см)
-  
-  # Зона склада (зона 35x35см)
-  warehouse:
-    x: 1.65     # 20см от правой стены (2.0 - 0.35)
-    y: 0.5      # Центр по ширине
-    radius: 0.175  # Радиус 17.5см (диаметр 35см)
-  
-  # Зона доставки (радиус 50см от home)
-  delivery:
-    x: 0.2
-    y: 0.5
-    radius: 0.5  # 50см радиус
-
-# Примечания для прототипа:
-# - Комната: 2x1 метр (200x100 см)
-# - Робот: 16x19 см
-# - Зоны: 35x35 см каждая
-# - Зазор от препятствий: 10 см (OBSTACLE_CLEARANCE в config.py)
-# - Домашняя позиция: (0.2, 0.5) - 20см от левой стены, центр
-# - Склад: (1.65, 0.5) - 20см от правой стены, центр
-# - Расстояние между зонами: ~1.45 метра
-# - Разрешение 2см обеспечивает точность для маленького робота
-# - Динамические препятствия обнаруживаются LiDAR в реальном времени
+# Нет препятствий - вся комната свободна
+obstacles: []
